--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.268" />
 
     <Button
-        android:id="@+id/buttonYes"
+        android:id="@+id/buttonMetric"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="93dp"
