--- a/app/src/main/res/layout/activity_third_matric_input.xml
+++ b/app/src/main/res/layout/activity_third_matric_input.xml
@@ -8,12 +8,11 @@
 
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="206dp"
-        android:layout_height="49dp"
-        android:text="@string/you_have_selected_matric_system"
+        android:id="@+id/textTitle"
+        android:layout_width="210dp"
+        android:layout_height="62dp"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textTitle"
         android:autofillHints="" />
 
     <TextView
@@ -42,7 +41,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/kg"
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -64,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textTitle"
         android:autofillHints="" />
 
     <TextView
@@ -72,7 +70,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/cm"
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
