--- a/app/src/main/res/layout/activity_third_matric_input.xml
+++ b/app/src/main/res/layout/activity_third_matric_input.xml
@@ -11,6 +11,7 @@
         android:id="@+id/textTitle"
         android:layout_width="210dp"
         android:layout_height="62dp"
+        android:text="@string/Title2"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
