--- a/app/src/main/res/layout/activity_fourth_final_result.xml
+++ b/app/src/main/res/layout/activity_fourth_final_result.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:text="Your BMI"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
